--- a/JSON_Mapper/MainWindow.xaml
+++ b/JSON_Mapper/MainWindow.xaml
@@ -26,7 +26,29 @@
         <StatusBar Grid.Row="2">
             Items
         </StatusBar>
-        <ListView x:Name="listView" HorizontalAlignment="Left" Height="241" Margin="10,10,0,0" Grid.Row="1" VerticalAlignment="Top" Width="497" SelectionChanged="listView_SelectionChanged">
+        <ListView x:Name="listView" HorizontalAlignment="Left" Height="241" Margin="10,10,0,0" Grid.Row="1" VerticalAlignment="Top" Width="169" SelectionChanged="listView_SelectionChanged">
+            <ListView.View>
+                <GridView>
+                    <GridViewColumn/>
+                </GridView>
+            </ListView.View>
+        </ListView>
+        <ListView x:Name="listView_Copy" HorizontalAlignment="Left" Height="241" Margin="179,10,0,0" Grid.Row="1" VerticalAlignment="Top" Width="174" SelectionChanged="listView_SelectionChanged" RenderTransformOrigin="0.5,0.5">
+            <ListView.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform AngleY="-0.316"/>
+                    <RotateTransform/>
+                    <TranslateTransform Y="0.466"/>
+                </TransformGroup>
+            </ListView.RenderTransform>
+            <ListView.View>
+                <GridView>
+                    <GridViewColumn/>
+                </GridView>
+            </ListView.View>
+        </ListView>
+        <ListView x:Name="listView_Copy1" HorizontalAlignment="Left" Height="241" Margin="353,10,0,0" Grid.Row="1" VerticalAlignment="Top" Width="164" SelectionChanged="listView_SelectionChanged">
             <ListView.View>
                 <GridView>
                     <GridViewColumn/>
