--- a/JSON_Mapper/MainWindow.xaml
+++ b/JSON_Mapper/MainWindow.xaml
@@ -33,7 +33,7 @@
                 </GridView>
             </ListView.View>
         </ListView>
-        <ListView x:Name="listView_Copy" HorizontalAlignment="Left" Height="241" Margin="179,10,0,0" Grid.Row="1" VerticalAlignment="Top" Width="174" SelectionChanged="listView_SelectionChanged" RenderTransformOrigin="0.5,0.5">
+        <ListView x:Name="listView1" HorizontalAlignment="Left" Height="241" Margin="179,10,0,0" Grid.Row="1" VerticalAlignment="Top" Width="174" SelectionChanged="listView_SelectionChanged" RenderTransformOrigin="0.5,0.5">
             <ListView.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -48,7 +48,7 @@
                 </GridView>
             </ListView.View>
         </ListView>
-        <ListView x:Name="listView_Copy1" HorizontalAlignment="Left" Height="241" Margin="353,10,0,0" Grid.Row="1" VerticalAlignment="Top" Width="164" SelectionChanged="listView_SelectionChanged">
+        <ListView x:Name="listView2" HorizontalAlignment="Left" Height="241" Margin="353,10,0,0" Grid.Row="1" VerticalAlignment="Top" Width="164" SelectionChanged="listView_SelectionChanged">
             <ListView.View>
                 <GridView>
                     <GridViewColumn/>
